Adding extra tests and safety for rolling up multiple children types to one parent as part of the ongoing discussion in #417

--- a/extra-tests/classes/RollupTests.cls
+++ b/extra-tests/classes/RollupTests.cls
@@ -39,7 +39,7 @@ private class RollupTests {
   private class RollupCalcMock extends RollupCalculator {
     // everything is a no-op
     public RollupCalcMock() {
-      super(rollupOp, null, Account.AnnualRevenue, new Rollup__mdt(), null);
+      super(rollupOp, testOpFieldOnCalcItem, Account.AnnualRevenue, new Rollup__mdt(), testLookupKeyField);
       calcMockWasCalled = true;
     }
   }
