Refactoring RollupRepository towards a more reusable bind variable structure, which allowed for a little less 'magic' in the downstream 'start' methods associated with batch processes

--- a/extra-tests/classes/RollupRepositoryTests.cls
+++ b/extra-tests/classes/RollupRepositoryTests.cls
@@ -4,7 +4,7 @@ private class RollupRepositoryTests {
   static void transformsCountQueriesProperly() {
     String queryString = 'SELECT Id, AnnualRevenue, Name\nFROM Account';
 
-    Integer accountCount = new RollupRepository(System.AccessLevel.SYSTEM_MODE).getCount(queryString, new Set<String>());
+    Integer accountCount = new RollupRepository(System.AccessLevel.SYSTEM_MODE).setQuery(queryString).getCount();
 
     System.assertEquals(0, accountCount);
   }
