Properly setting access level for rollup conductors

--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -2901,6 +2901,7 @@ global without sharing virtual class Rollup {
     );
     processor.triggerContext = apexContext;
     processor.accessLevel = RollupMetaPicklists.getAccessLevel(rollupMetadata);
+    rollupConductor.accessLevel = processor.accessLevel;
     return addRollup(rollupConductor, processor);
   }
 
