Further query binding optimizations

--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -1569,18 +1569,18 @@ global without sharing virtual class Rollup {
       }
     }
 
-    List<Id> objIds = new List<Id>();
+    List<Id> updatedRecordIds = new List<Id>();
     for (SObject cdcRecord : cdcRecords) {
       header = (EventBus.ChangeEventHeader) cdcRecord.get('ChangeEventHeader');
       uniqueFieldNames.addAll(header.changedfields);
-      objIds.addAll(header.getRecordIds());
+      updatedRecordIds.addAll(header.getRecordIds());
     }
 
     String queryString = RollupQueryBuilder.Current.getQuery(sObjectType, new List<String>(uniqueFieldNames), 'Id', '=');
     // getting the items back from the database before putting them into the map is an important step
     // we COULD just initialize the map with the query, but then the map's .values() list doesn't return
     // anything for .getSObjectType() - which we need, further downstream
-    List<SObject> cdcCalcItems = new RollupRepository(accessLevel).setQuery(queryString).setArg(objIds).get();
+    List<SObject> cdcCalcItems = new RollupRepository(accessLevel).setQuery(queryString).setArg(updatedRecordIds).get();
     Map<Id, SObject> cdcCalcItemsMap = new Map<Id, SObject>(cdcCalcItems);
 
     Rollup rollupToReturn = runFromApex(matchingMetadata, null, cdcCalcItems, cdcCalcItemsMap);
@@ -2219,8 +2219,10 @@ global without sharing virtual class Rollup {
 
   private static void appendQueryCount(RollupMetadata metaWrapper, Rollup__mdt meta, String whereClause, Schema.SObjectType childType) {
     if (metaWrapper.recordCount != RollupRepository.SENTINEL_COUNT_VALUE) {
-      String countQuery = RollupQueryBuilder.Current.getQuery(childType, new List<String>(), meta.LookupFieldOnLookupObject__c, '!=', whereClause);
-      Integer currentCount = new RollupRepository(RollupMetaPicklists.getAccessLevel(meta)).setQuery(countQuery).setArg(new Set<String>()).getCount();
+      Integer currentCount = new RollupRepository(RollupMetaPicklists.getAccessLevel(meta))
+        .setQuery(RollupQueryBuilder.Current.getQuery(childType, new List<String>(), meta.LookupFieldOnLookupObject__c, '!=', whereClause))
+        .setArg(new Set<String>())
+        .getCount();
       metaWrapper.recordCount = currentCount == RollupRepository.SENTINEL_COUNT_VALUE ? currentCount : metaWrapper.recordCount + currentCount;
     }
   }
@@ -2838,14 +2840,10 @@ global without sharing virtual class Rollup {
       if (updatedChildTypes.contains(calcItemSObject) == false) {
         updatedChildTypes.add(calcItemSObject);
 
-        String queryString = RollupQueryBuilder.Current.getQuery(
-          calcItemSObject,
-          new List<String>{ 'Id', meta.LookupFieldOnCalcItem__c },
-          meta.LookupFieldOnCalcItem__c,
-          '='
-        );
         List<SObject> recordsToReparent = new RollupRepository(RollupMetaPicklists.getAccessLevel(meta))
-          .setQuery(queryString)
+          .setQuery(
+            RollupQueryBuilder.Current.getQuery(calcItemSObject, new List<String>{ 'Id', meta.LookupFieldOnCalcItem__c }, meta.LookupFieldOnCalcItem__c, '=')
+          )
           .setArg(mergedIdToCurrentParentId.keySet())
           .get();
         for (SObject childToReparent : recordsToReparent) {
