--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -1569,18 +1569,18 @@ global without sharing virtual class Rollup {
       }
     }
 
-    List<Id> objIds = new List<Id>();
+    List<Id> updatedRecordIds = new List<Id>();
     for (SObject cdcRecord : cdcRecords) {
       header = (EventBus.ChangeEventHeader) cdcRecord.get('ChangeEventHeader');
       uniqueFieldNames.addAll(header.changedfields);
-      objIds.addAll(header.getRecordIds());
+      updatedRecordIds.addAll(header.getRecordIds());
     }
 
     String queryString = RollupQueryBuilder.Current.getQuery(sObjectType, new List<String>(uniqueFieldNames), 'Id', '=');
     // getting the items back from the database before putting them into the map is an important step
     // we COULD just initialize the map with the query, but then the map's .values() list doesn't return
     // anything for .getSObjectType() - which we need, further downstream
-    List<SObject> cdcCalcItems = new RollupRepository(accessLevel).get(queryString, objIds);
+    List<SObject> cdcCalcItems = new RollupRepository(accessLevel).setQuery(queryString).setArg(updatedRecordIds).get();
     Map<Id, SObject> cdcCalcItemsMap = new Map<Id, SObject>(cdcCalcItems);
 
     Rollup rollupToReturn = runFromApex(matchingMetadata, null, cdcCalcItems, cdcCalcItemsMap);
@@ -2219,9 +2219,10 @@ global without sharing virtual class Rollup {
 
   private static void appendQueryCount(RollupMetadata metaWrapper, Rollup__mdt meta, String whereClause, Schema.SObjectType childType) {
     if (metaWrapper.recordCount != RollupRepository.SENTINEL_COUNT_VALUE) {
-      String countQuery = RollupQueryBuilder.Current.getQuery(childType, new List<String>(), meta.LookupFieldOnLookupObject__c, '!=', whereClause);
-      Set<String> emptyCollection = new Set<String>();
-      Integer currentCount = new RollupRepository(RollupMetaPicklists.getAccessLevel(meta)).getCount(countQuery, emptyCollection);
+      Integer currentCount = new RollupRepository(RollupMetaPicklists.getAccessLevel(meta))
+        .setQuery(RollupQueryBuilder.Current.getQuery(childType, new List<String>(), meta.LookupFieldOnLookupObject__c, '!=', whereClause))
+        .setArg(new Set<String>())
+        .getCount();
       metaWrapper.recordCount = currentCount == RollupRepository.SENTINEL_COUNT_VALUE ? currentCount : metaWrapper.recordCount + currentCount;
     }
   }
@@ -2839,13 +2840,12 @@ global without sharing virtual class Rollup {
       if (updatedChildTypes.contains(calcItemSObject) == false) {
         updatedChildTypes.add(calcItemSObject);
 
-        String queryString = RollupQueryBuilder.Current.getQuery(
-          calcItemSObject,
-          new List<String>{ 'Id', meta.LookupFieldOnCalcItem__c },
-          meta.LookupFieldOnCalcItem__c,
-          '='
-        );
-        List<SObject> recordsToReparent = new RollupRepository(RollupMetaPicklists.getAccessLevel(meta)).get(queryString, mergedIdToCurrentParentId.keySet());
+        List<SObject> recordsToReparent = new RollupRepository(RollupMetaPicklists.getAccessLevel(meta))
+          .setQuery(
+            RollupQueryBuilder.Current.getQuery(calcItemSObject, new List<String>{ 'Id', meta.LookupFieldOnCalcItem__c }, meta.LookupFieldOnCalcItem__c, '=')
+          )
+          .setArg(mergedIdToCurrentParentId.keySet())
+          .get();
         for (SObject childToReparent : recordsToReparent) {
           childToReparent.put(meta.LookupFieldOnCalcItem__c, mergedIdToCurrentParentId.get((Id) childToReparent.get(meta.LookupFieldOnCalcItem__c)));
           recordsToUpdate.add(childToReparent);
@@ -2899,6 +2899,7 @@ global without sharing virtual class Rollup {
     );
     processor.triggerContext = apexContext;
     processor.accessLevel = RollupMetaPicklists.getAccessLevel(rollupMetadata);
+    rollupConductor.accessLevel = processor.accessLevel;
     return addRollup(rollupConductor, processor);
   }
 
