--- a/rollup/core/classes/RollupEvaluator.cls
+++ b/rollup/core/classes/RollupEvaluator.cls
@@ -1,4 +1,4 @@
-public without sharing abstract class RollupEvaluator implements Rollup.Evaluator {
+public without sharing abstract class RollupEvaluator implements Rollup.Evaluator, RollupLogger.ToStringObject {
   private static final String RELATIONSHIP_FIELD_DELIMITER = '\\.';
   private static final String TRUE_VAL = 'true';
   private static final String FALSE_VAL = 'false';
@@ -505,7 +505,7 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
     }
   }
 
-  private abstract class ConditionalGrouping {
+  private abstract class ConditionalGrouping implements RollupLogger.ToStringObject {
     protected final List<WhereFieldCondition> innerConditions;
     public ConditionalGrouping(List<WhereFieldCondition> innerConditions) {
       this.innerConditions = innerConditions;
@@ -564,7 +564,7 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
     }
   }
 
-  private class WhereFieldCondition {
+  private class WhereFieldCondition implements RollupLogger.ToStringObject {
     private final SObjectType sObjectType;
     private final String fieldName;
     private final Map<String, Schema.SObjectField> fieldNameToTokens;
@@ -884,7 +884,9 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
   }
 
   private static void addLog(Object clazz, Boolean matches, Object item, LoggingLevel logLevel) {
-    RollupLogger.Instance.log('Evaluator matches? ' + matches, item, logLevel);
+    if (matches == false) {
+      RollupLogger.Instance.log('Removing non-match for:', new List<Object>{ clazz, item }, logLevel);
+    }
   }
 
   private static String getCurrentTransactionId() {
